fix gap for system parameters

--- a/main-app/src/app/modules/calculate-values/components/calculate-values-form/calculate-values-form.component.less
+++ b/main-app/src/app/modules/calculate-values/components/calculate-values-form/calculate-values-form.component.less
@@ -62,7 +62,7 @@
     }
 
     &__examples {
-      width: 30%;
+      width: 33%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -84,7 +84,7 @@
     }
 
     &__system {
-      width: 60%;
+      width: 65%;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -112,6 +112,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        column-gap: 1rem;
 
         .mat-form-field {
           width: 270px;
